# rayda-project

./: .gitignore  LICENSE  README.md
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  langgraph.json  pyproject.toml
backend/alembic/versions/: 2797c9544355_initial_migration.py  5b70d3f8aef7_run_migrations.py
backend/app/: agent.py  evaluate.py  main.py  models.py  schemas.py  tools.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: chats.py
backend/app/core/: database.py  load.py
backend/tests/: conftest.py  test_api.py  test_guardrails.py  test_tools.py
