[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.12",
    "langchain-openrouter>=0.2.6",
    "langgraph>=1.2.9",
    "langgraph-cli[inmem]>=0.4.30",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]
